[gd_scene load_steps=46 format=2]

[ext_resource path="res://levels/level_pedo/assets/png/efecto acido sheet.png" type="Texture" id=1]
[ext_resource path="res://overlap/HurtBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/level_pedo/assets/png/aura_boss_2_sheet.png" type="Texture" id=3]
[ext_resource path="res://levels/level_pedo/assets/png/jaique-enemigo-sheet.png" type="Texture" id=4]
[ext_resource path="res://levels/level_pedo/enemy/enemy_pedo_acorazado.gd" type="Script" id=5]
[ext_resource path="res://levels/level_pedo/enemy/buffArea.tscn" type="PackedScene" id=6]
[ext_resource path="res://levels/level_pedo/assets/Audios/efecto acido.mp3" type="AudioStream" id=7]
[ext_resource path="res://levels/level_pedo/assets/png/jaique_enemy_acor_2_n.png" type="Texture" id=8]
[ext_resource path="res://levels/level_pedo/assets/png/jaique_enemy_acor_1_f.png" type="Texture" id=9]
[ext_resource path="res://levels/level_pedo/assets/png/jaique_enemy_acor_3_n.png" type="Texture" id=10]
[ext_resource path="res://levels/level_pedo/assets/png/jaique_enemy_acor_2_f.png" type="Texture" id=11]
[ext_resource path="res://levels/level_pedo/assets/png/jaique_enemy_acor_1_n.png" type="Texture" id=12]
[ext_resource path="res://levels/level_pedo/assets/png/jaique_enemy_acor_3_f.png" type="Texture" id=13]
[ext_resource path="res://levels/level_pedo/assets/png/jaique_enemy_sheet_normal_f.png" type="Texture" id=14]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 623, 815 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 623, 0, 623, 815 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 1246, 0, 623, 815 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 9.54225
height = 0.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 12.1089
height = 38.0719

[sub_resource type="Animation" id=7]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 221, 472 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 221, 0, 221, 472 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 189, 288 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 12 )
region = Rect2( 189, 0, 189, 288 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 189, 288 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 8 )
region = Rect2( 189, 0, 189, 288 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 189, 288 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 10 )
region = Rect2( 189, 0, 189, 288 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 189, 289 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 9 )
region = Rect2( 189, 0, 189, 289 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 189, 289 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 11 )
region = Rect2( 189, 0, 189, 289 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 189, 289 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 13 )
region = Rect2( 189, 0, 189, 289 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 183, 289 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 14 )
region = Rect2( 183, 0, 183, 289 )

[sub_resource type="SpriteFrames" id=31]
animations = [ {
"frames": [ SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="enemy_pedo_acorazado" type="KinematicBody2D" groups=[
"enemies",
]]
position = Vector2( -0.264862, 3.8147e-06 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 5 )
drops = 50

[node name="aura_saiya" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 1.89563, -28.5007 )
scale = Vector2( 0.159181, 0.120707 )
frames = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="HurtBox" parent="." instance=ExtResource( 2 )]
collision_layer = 16
collision_mask = 2
script = null

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0.134152, -21.224 )
shape = SubResource( 6 )

[node name="effectTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="lifeRed" type="ColorRect" parent="."]
visible = false
margin_left = -21.7027
margin_top = -70.5625
margin_right = 18.2973
margin_bottom = -68.5625
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lifeGreen" type="ColorRect" parent="."]
visible = false
margin_left = -21.7027
margin_top = -70.5625
margin_right = 18.2973
margin_bottom = -68.5625
color = Color( 0.168627, 0.992157, 0.0235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="efecto_da√±o" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -8.261

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/got_hit = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 3.24889, -29.6029 )
scale = Vector2( 0.334044, 0.343209 )
texture = ExtResource( 1 )
hframes = 3
frame = 2

[node name="buffArea" parent="." instance=ExtResource( 6 )]

[node name="shieldTimer" type="Timer" parent="."]

[node name="sprites" type="Node2D" parent="."]
position = Vector2( -4.39177, -22.0354 )
scale = Vector2( 0.187065, 0.122981 )

[node name="descora" type="AnimatedSprite" parent="sprites"]
visible = false
frames = SubResource( 10 )
playing = true

[node name="normal1" type="AnimatedSprite" parent="sprites"]
position = Vector2( 9.92082, 2.04886 )
scale = Vector2( 1.24993, 1.74214 )
frames = SubResource( 13 )
frame = 1
playing = true

[node name="normal2" type="AnimatedSprite" parent="sprites"]
visible = false
position = Vector2( 22.4083, 5.2608 )
scale = Vector2( 1.41983, 1.7456 )
frames = SubResource( 16 )
playing = true

[node name="normal3" type="AnimatedSprite" parent="sprites"]
visible = false
position = Vector2( 13.4887, 6.78364 )
scale = Vector2( 1.34432, 1.75618 )
frames = SubResource( 19 )
frame = 1
playing = true

[node name="frozen1" type="AnimatedSprite" parent="sprites"]
visible = false
position = Vector2( 11.7048, 14.536 )
scale = Vector2( 1.40095, 1.78921 )
frames = SubResource( 22 )
frame = 1
playing = true

[node name="frozen2" type="AnimatedSprite" parent="sprites"]
visible = false
position = Vector2( 23.3003, 19.963 )
scale = Vector2( 1.35376, 1.73288 )
frames = SubResource( 25 )
frame = 1
playing = true

[node name="frozen3" type="AnimatedSprite" parent="sprites"]
visible = false
position = Vector2( 9.92084, 15.8927 )
scale = Vector2( 1.38207, 1.77982 )
frames = SubResource( 28 )
playing = true

[node name="frozen_des" type="AnimatedSprite" parent="sprites"]
visible = false
position = Vector2( 27.6508, 17.6378 )
scale = Vector2( 1.49716, 1.85443 )
frames = SubResource( 31 )
frame = 1
playing = true

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="effectTimer" to="." method="_on_effectTimer_timeout"]

[editable path="HurtBox"]
